{{$NEXT}}

1.88    2015-04-24

- This release is based on version 2015d of the Olson database. This release
  includes contemporary changes for Egypt.


1.87    2015-04-20

- This release is based on version 2015c of the Olson database. This release
  includes contemporary changes for Egypt, though it looks like those will
  change again soon.


1.86    2015-03-21

- This release is based on version 2015b of the Olson database. This release
  includes contemporary changes for Mongolia and Palestine.


1.85    2015-01-30

- This release is based on version 2015a of the Olson database. This release
  includes contemporary changes for Quintana Roo and Chile.


1.84    2015-01-17

- Removed the per-OS prereqs on DateTime::TimeZone::HPUX and
  DateTime::TimeZone::Local::Win32. This gets rid of circular dependencies
  between those distros and this one. RT #101588, 101589 and 68231.


1.83    2014-12-24

- The last release did not include any of the generated zone files. Oops.

- Attempting to fix indexing of DateTime::TimeZone::Catalog on metacpan. No
  real code or zone changes.


1.82    2014-12-24

- Various changes to get tests passing and tools code working with blead. This
  includes fixing some "Redundant argument in sprintf" warnings that could
  occur in the DateTime test suite. Reported by Slaven Rezic. RT #10116.


1.81    2014-11-21

- Removed tests for Win32 code.


1.80    2014-11-16

- This distro no longer ships the DateTime::TimeZone::Local::Win32
  module. Instead, it depends on that module when you install
  DateTime::TimeZone on a Windows system machine.

- Tweaked the warning when loading a zone class from disk that was generated
  using a different Olson version than the current DateTime::TimeZone
  module. Previously, it said the loaded version was older, but all we know is
  that it's different. Reported by Karen Etheridge. RT #66097.


1.79    2014-11-11

- This release is based on version 2014j of the Olson database. This release