@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Fix a syntax error in the Android local time zone module. Reported by Gregor
+  Hermann. RT #104105.
+
+
 1.88    2015-04-24
 
 - This release is based on version 2015d of the Olson database. This release
